# alembic-actions

./: .gitignore  CLAUDE.md  PERMISSIONS.md  README.md  RELEASE_NOTES.md  action.yaml  index.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: action-test.yml  test.yml
actions/alembic-deploy/: action.yaml
actions/alembic-review/: action.yaml
actions/alembic-test/: action.yaml
deploy/: README.md  action.yaml
review/: README.md  action.yaml
shared/scripts/: alembic_utils.py  generate_sql.py
shared/tests/: test_alembic_utils.py  test_generate_sql.py  test_migration_parsing.py  test_multi_database.py
test/: README.md  action.yaml
tests/fixtures/: alembic.ini  alembic_multi.ini
tests/fixtures/migrations/: env.py
tests/fixtures/migrations/versions/: 1a2b3c4d5e6f_initial_migration.py
