[project]
name = "alembic-actions"
version = "0.1.0"
description = "Collection of GitHub Actions for managing Alembic database migrations"
readme = "README.md"
authors = [
    {name = "Contributors"}
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "alembic>=1.7.0",
    "sqlalchemy>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
exclude = ["tests*"]

[project.urls]
Repository = "https://github.com/OpenMindUA/alembic-actions"
Issues = "https://github.com/OpenMindUA/alembic-actions/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["shared/tests", "tests"]
python_files = "test_*.py"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false